# NALib

./: .gitignore  .gitmodules  NALibChangelogSinceV0.txt  NALibChangelogSinceV10.txt  NALibChangelogV0_V10.txt  NALibChangelogV10_V20.txt  Readme.txt  license.txt  readme.txt
code/Examples/: CMakeLists.txt  Examples.vcxproj
code/Examples/src/: generalExample.c  jsonExample.c  listExample.c  main.c  stackExample.c
code/GUIExamples/: CMakeLists.txt  GUIExamples.vcxproj  ScreenController.c
code/GUIExamples/res/: translationsFinance.txt  translationsGeneral.txt
code/GUIExamples/src/: ButtonController.c  CommonController.c  CommonController.h  ExampleController.c  ExperimentController.c  FontController.c  GUIExamples.h  GUIExamplesApplication.c  Layout.h  ScreenController.c  TemperatureController.c  WindowController.c  main.c
code/GUIExamples/src/Controller/: ApplicationController.c  ButtonController.c  CheckBoxController.c  FontController.c  ImageSpaceController.c  LabelController.c  MenuController.c  MetalSpaceController.c  OpenGLSpaceController.c  RadioController.c  ScreenController.c  SelectController.c  SliderController.c  SpaceController.c  TextBoxController.c  TextFieldController.c  WindowController.c
code/ImageScaler/: CMakeLists.txt  ImageScaler.vcxproj
code/ImageScaler/res/: catSilhouette.xcf
code/ImageScaler/src/: main.c
code/NALib/: CMakeLists.txt  NALib.vcxproj  NALibVS2010.vcxproj
code/NALib/src/: NAApp.h  NAArray.h  NABabyColor.h  NABabyImage.h  NABase.h  NABinaryData.h  NABuffer.h  NACircularBuffer.h  NAConfiguration.h  NACoord.h  NADateTime.h  NAFile.h  NAHeap.h  NAJSON.h  NAKey.h  NALib.h  NAList.h  NAMathConstants.h  NAMathOperators.h  NAMemory.h  NAPNG.h  NAPool.h  NAPreferences.h  NARandom.h  NAStack.h  NAString.h  NAStruct.h  NATesting.h  NAThreading.h  NATranslator.h  NATree.h  NAUI.h  NAURL.h  NAUtility.h  NAValueHelper.h  NAVectorAlgebra.h  NAVisual.h
code/NALib/src/NAApp/: CMakeSrcList.txt  NAApp.h  NAAppDefinitions.h  NAApplication.h  NAButton.h  NACheckBox.h  NAClipboard.h  NAFont.h  NAImageSet.h  NAImageSpace.h  NAKeyboard.h  NALabel.h  NALayout.h  NAMenu.h  NAMenuItem.h  NAMetalSpace.h  NAMouse.h  NAOpenGLSpace.h  NAPopupButton.h  NAPreferences.h  NARadio.h  NAReaction.h  NASelect.h  NASpace.h  NATextBox.h  NATextField.h  NAUIColor.h  NAUIElement.h  NAUIImage.h  NAWindow.h
code/NALib/src/NAApp/Core/: NAAppCore.c  NAAppCore.h  NAClipboard.c  NACoreClipboardII.h  NACoreFontII.h  NACoreImageSetII.h  NACoreKeyboardII.h  NACoreMouseII.h  NACorePreferencesII.h  NACoreUIImageII.h  NAFont.c  NAFont.h  NAKeyboard.c  NAKeyboard.h  NALayout.c  NAMouse.c  NAPreferences.c  NAPreferencesCore.h  NAPreferencesII.h  NAReaction.h  NATranslator.c  NAUIImage.c  NAUIImage.h  NAUIImageCore.h  NAUIImageII.h
code/NALib/src/NAApp/UIElements/: NAApplication.h  NAButton.h  NACheckBox.h  NAImageSpace.h  NALabel.h  NAMenu.h  NAMenuItem.h  NAMetalSpace.h  NAOpenGLSpace.h  NARadio.h  NAScreen.h  NASelect.h  NASlider.h  NASpace.h  NATextBox.h  NATextField.h  NAUIElement.h  NAWindow.h
code/NALib/src/NAApp/Windows/: NAPreferencesWINAPIII.h  NAUIImageWINAPIII.h  NAUIWINAPI.c
code/NALib/src/NAApp/macOS/: NAClipboardII.h  NACocoa.m  NACocoaClipboardII.h  NACocoaColorII.h  NACocoaII.h  NACocoaImageSetII.h  NACocoaInterfaces.h  NACocoaLegacy.h  NACocoaLegacyII.h  NACocoaMouseII.h  NACocoaPreferencesII.h  NAImageSetCocoaII.h  NAPreferencesCocoa.m  NAPreferencesCocoaII.h  NAUICocoaII.h  NAUICocoaLegacyII.h  NAUIImageCocoaII.h
code/NALib/src/NAApp/uiHeader/: NALabel.h  NAMenu.h  NAMenuItem.h  NAScreen.h  NASlider.h
code/NALib/src/NAApp/winAPI/: NAFont.c  NAPreferencesWINAPI.c  NAPreferencesWINAPIII.h  NAUIImageWINAPIII.h  NAUIWINAPI.c  NAUIWINAPIII.h  NAWINAPI.c  NAWINAPIClipboardII.h  NAWINAPIColorII.h  NAWINAPIFontII.h  NAWINAPIII.h  (+6 more)
code/NALib/src/NABase/: CMakeSrcList.txt  NAAPI.h  NABase.h  NABaseMacros.h  NAChar.h  NACompiler.h  NAConfiguration.h  NADebug.c  NADebug.h  NADebugII.h  NADebugging.c  NADebugging.h  NADebuggingII.h  NAEncoding.h  NAEnvironment.h  NAFloatingPoint.h  NAFloatingPointII.h  NAInt128.h  NAInt128II.h  NAInt256.h  NAInt256II.h  NAInt64.h  NAInt64II.h  NAInteger.h  NALanguage.h  NAMacros.c  NAMacros.h  NAMacrosII.h  NANumerics.h  NANumericsII.h  NAPointerArithmetics.h  NATemplate.h  NATest.c  NATest.h  NATestII.h  NATesting.c  NATesting.h  NATestingII.h
code/NALib/src/NACore/: NADateTime.c  NADateTimeII.h  NAFile.c  NAFileII.h  NAKeyII.h  NAThreadingII.h  NAURL.c  NAURLII.h  NAValueHelper.h  NAValueHelperII.h
code/NALib/src/NAEnvironment/: NATranslator.c  NAUICore.c  NAUICore.h  NAUIImage.c  NAUIImage.h  NAUIImageII.h
code/NALib/src/NAJSON/: NAJSON.c
code/NALib/src/NAMath/: CMakeSrcList.txt  NAComplex.h  NAComplexII.h  NACoord.h  NACoordII.h  NAMath.h  NAMathConstants.h  NAMathOperators.h  NAMathOperatorsII.h  NAMoney.c  NARandom.h  NARandomII.h  NAVectorAlgebra.h  NAVectorAlgebraII.h
code/NALib/src/NAStruct/: CMakeSrcList.txt  NAArray.h  NAArrayII.h  NABuffer.h  NACircularBuffer.h  NACircularBufferII.h  NAHeap.h  NAList.c  NAList.h  NAListII.h  NAPool.h  NAPoolII.h  NAStack.h  NAStackII.h  NAString.c  NAStringII.h  NAStruct.h  NATree.h
code/NALib/src/NAUtility/: CMakeSrcList.txt  NABinaryData.h  NADateTime.h  NAFile.h  NAJSON.h  NAKey.h  NAMemory.h  NANotifier.h  NAString.h  NATesting.h  NAThreading.h  NATranslator.h  NAURL.h  NAUtility.h  NAValueHelper.h
code/NALib/src/NAVisual/: CMakeSrcList.txt  NA3DHelper.h  NAABYColor.h  NAABYImage.h  NABabyColor.c  NABabyColor.h  NABabyImage.c  NABabyImage.h  NAColor.h  NADeflate.c  NADeflate.h  NAImage.h  NAPNG.c  NAPNG.h  NAVisual.h
code/PixelFontCreator/: CMakeLists.txt
code/PixelFontCreator/res/: miniascii.raw  miniascii.xcf
code/PixelFontCreator/src/: main.c
code/Test/: CMakeLists.txt  Test.vcxproj  Tests.vcxproj  testNALib.vcxproj
code/Test/src/: mainHeapTest.c  mainInt128Test.c  mainInt256Test.c  mainInt64Test.c  mainTreeTest.c  testHelper.c  testHelper.h  testNALib.c  testNALib.h
code/Test/src/testNALib/: testNABase.c  testNACore.c  testNAStruct.c  testNAUtility.c
(+952 files in other folders)
